<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:layout_weight="1.0"
    android:background="@color/white" > 
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">
	    
	<TextView
    android:id="@+id/address_label"
    style="?android:attr/listSeparatorTextViewStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="Address"/>
		<Switch 
		    android:id="@+id/checkbox_remember"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    android:layout_marginTop="15dp"
		    android:text="@string/remember_exit"
		    android:textOn="@string/yes"
		    android:textOff="@string/no"
		    android:onClick="onToggleClicked" />
		
	<TextView
    android:id="@+id/address_label2"
    style="?android:attr/listSeparatorTextViewStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="Address2"/>
		<Switch 
		    android:id="@+id/checkbox_hidemouse"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    android:layout_marginTop="25dp"
		    android:text="@string/hide_mouse"
		    android:textOn="@string/yes"
		    android:textOff="@string/no"
		    android:onClick="onToggleClicked"/>
	
	</LinearLayout>
</ScrollView> 